# MiceCamRev

./: .gitignore  Makefile  README.md  frame_analysis_report.html  micecam.spec  packager.py  pyproject.toml  setup_ssh.ps1
.github/workflows/: build.yml
scripts/: _find_latest.py  analyze_frame_intervals.py  check_recording.py  download_ffmpeg.py  test_cameras.py
src/micecam/: __init__.py  __main__.py  camera_manager.py  main.py  recorder.py  timestamp.py
src/micecam/core/: sync_controller.py
src/micecam/gui/: __init__.py  camera_panel.py  main_window.py
src/micecam/services/: disk_monitor.py
src/micecam/utils/: platform.py  resource_path.py
tests/: test_device_enumerator.py  test_ffmpeg_backend.py  test_preview_mode.py  test_srt_writer.py
